@@ -6,19 +6,18 @@ for x in range(6, 750, 79):
         if (y != 207):
             if ( y % 2 == 1):
                 AddBrick("brick", x, y, "basic_brick_hit()",
-                         "graphics/objects/1hit_brick75.png")
+                         "graphics/bricks/blue_75.png")
             else:
                 AddBrick("brick", x, y, "basic_brick_hit()",
-                         "graphics/objects/stay_brick75.png")
+                         "graphics/bricks/green_75.png")
         else:
-            if (x != 401):
+            if (x % 2 == 1):
                 AddBrick("brick-stay-3", x, y, "basic_brick_hit()",
-                         "graphics/objects/3hit_brick75.png")
+                         "graphics/bricks/gray_stay_75.png")
             else:
                 AddBrick("brick", x, y,
                          "power_up_add_ball_hit()",
-#                         "basic_brick_hit()",
-                         "graphics/objects/powerup.png")
+                         "graphics/powerups/yellow_l.png")
                 
             
             
@@ -29,11 +28,11 @@ AddEntity("static", 1, -10, 798, 11, "static_hit()")
 AddEntity("hole", 1, 550, 798, 50, "")
 
 # Add a paddle
-SetPaddle(366, 450, "graphics/objects/paddle75.png")
+SetPaddle(366, 450, "graphics/paddles/square_75.png")
 
 # define a round start function
 def RoundStart():
-    AddBallDefault("graphics/objects/basic_ball.png")
+    AddBallDefault("graphics/balls/red.png")
 
 # And, call it - probably will go
 RoundStart();
